--- a/templates/index.html
+++ b/templates/index.html
@@ -18,6 +18,14 @@
        <div class="page-header">
          <h1>Proxy Singed</h1>
        </div>
+       <div>
+           <!-- Build status -->
+         <a href="https://git.hexplo.it/RiotKit/Singed/commits/master"><img alt="build status" src="https://git.hexplo.it/RiotKit/Singed/badges/master/build.svg" /></a>
+           <!-- Coverage Status -->
+         <a href="https://git.hexplo.it/RiotKit/Singed/commits/master"><img alt="coverage report" src="https://git.hexplo.it/RiotKit/Singed/badges/master/coverage.svg" /></a>
+         <a href="https://twitter.com/hexploitable"><img alt="twitter @Hexploitable" src="https://img.shields.io/badge/twitter-@Hexploitable-blue.svg?style=flat"/></a>
+       </div>
+       <br />
        <img src="{{ url_for('static',filename='images/Singed.png') }}" />
        <br /><br />
        <p class="lead">
