point to github instead of gitlab

--- a/templates/index.html
+++ b/templates/index.html
@@ -38,7 +38,7 @@
        </p>
        <p>
          For more information and usage, please see the open source project:
-         <a href="https://git.hexplo.it/RiotKit/Singed" target="_blank">Proxy Singed - Gitlab</a>.
+         <a href="https://github.com/RiotKit/Singed" target="_blank">Proxy Singed - Github</a>.
        </p>
      </div>
 
