add version to static page

--- a/templates/index.html
+++ b/templates/index.html
@@ -23,6 +23,7 @@
          <a href="https://git.hexplo.it/RiotKit/Singed/commits/master"><img alt="build status" src="https://git.hexplo.it/RiotKit/Singed/badges/master/build.svg" /></a>
            <!-- Coverage Status -->
          <a href="https://git.hexplo.it/RiotKit/Singed/commits/master"><img alt="coverage report" src="https://git.hexplo.it/RiotKit/Singed/badges/master/coverage.svg" /></a>
+	 <a href="https://badge.fury.io/gh/RiotKit%2FSinged"><img src="https://badge.fury.io/gh/RiotKit%2FSinged.svg" alt="GitHub version" height="18"></a>
          <a href="https://twitter.com/hexploitable"><img alt="twitter @Hexploitable" src="https://img.shields.io/badge/twitter-@Hexploitable-blue.svg?style=flat"/></a>
        </div>
        <br />
