--- a/templates/index.html
+++ b/templates/index.html
@@ -20,12 +20,13 @@
        </div>
        <div>
            <!-- Build status -->
-         <a href="https://git.hexplo.it/RiotKit/Singed/commits/master"><img alt="build status" src="https://git.hexplo.it/RiotKit/Singed/badges/master/build.svg" /></a>
+           <!--<a href="https://git.hexplo.it/RiotKit/Singed/commits/master"><img alt="build status" src="https://git.hexplo.it/RiotKit/Singed/badges/master/build.svg" /></a>-->
            <!-- Coverage Status -->
-         <a href="https://git.hexplo.it/RiotKit/Singed/commits/master"><img alt="coverage report" src="https://git.hexplo.it/RiotKit/Singed/badges/master/coverage.svg" /></a>
+           <!--<a href="https://git.hexplo.it/RiotKit/Singed/commits/master"><img alt="coverage report" src="https://git.hexplo.it/RiotKit/Singed/badges/master/coverage.svg" /></a>-->
 	       <a href="https://github.com/RiotKit/Singed/blob/master/LICENSE"><img src="https://img.shields.io/badge/license-MIT-FF0000.svg?style=flat" alt="License type" height="18"></a>
 	       <a href="https://badge.fury.io/gh/RiotKit%2FSinged"><img src="https://badge.fury.io/gh/RiotKit%2FSinged.svg" alt="GitHub version" height="18"></a>
          <a href="https://twitter.com/hexploitable"><img alt="twitter @Hexploitable" src="https://img.shields.io/badge/twitter-@Hexploitable-0099FF.svg?style=flat"/></a>
+         <a href="https://discord.gg/KRNsGRF"><img alt="discord server KRNsGRF" src="https://img.shields.io/badge/Discord-join%20chat%20%E2%86%92-738bd7.svg?style=flat&label=discord"/></a>
        </div>
        <br />
        <img src="{{ url_for('static',filename='images/Singed.png') }}" />
